{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 184,
  "lineage": "f029212e-34a6-658a-05de-30d8a8c0d596",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "all_worker_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654447829:security-group/sg-0fd9e1b625bba26ac",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0fd9e1b625bba26ac",
            "ingress": [],
            "name": "all_worker_management20240725085717440500000006",
            "name_prefix": "all_worker_management",
            "owner_id": "654654447829",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e21afa0e42cfe0f9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all_worker_mgmt_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow outbound traffic to anywhere",
            "from_port": 0,
            "id": "sgrule-934470548",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0fd9e1b625bba26ac",
            "security_group_rule_id": "sgr-0713c7b5a85d4c058",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.all_worker_mgmt",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all_worker_mgmt_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow inbound traffic from eks",
            "from_port": 0,
            "id": "sgrule-1968686826",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0fd9e1b625bba26ac",
            "security_group_rule_id": "sgr-00812bc866ef1a005",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.all_worker_mgmt",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654447829:security-group/sg-0a0822931f340999c",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0a0822931f340999c",
            "ingress": [],
            "name": "anup-eks-KLvDw7qW-cluster-20240725085719619800000007",
            "name_prefix": "anup-eks-KLvDw7qW-cluster-",
            "owner_id": "654654447829",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "anup-eks-KLvDw7qW-cluster",
              "cluster": "EKS-anup"
            },
            "tags_all": {
              "Name": "anup-eks-KLvDw7qW-cluster",
              "cluster": "EKS-anup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e21afa0e42cfe0f9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654447829:security-group/sg-037eb4dcf105fef0f",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-037eb4dcf105fef0f",
            "ingress": [],
            "name": "anup-eks-KLvDw7qW-node-20240725085719701800000008",
            "name_prefix": "anup-eks-KLvDw7qW-node-",
            "owner_id": "654654447829",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "anup-eks-KLvDw7qW-node",
              "cluster": "EKS-anup",
              "kubernetes.io/cluster/anup-eks-KLvDw7qW": "owned"
            },
            "tags_all": {
              "Name": "anup-eks-KLvDw7qW-node",
              "cluster": "EKS-anup",
              "kubernetes.io/cluster/anup-eks-KLvDw7qW": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e21afa0e42cfe0f9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-2551201158",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a0822931f340999c",
            "security_group_rule_id": "sgr-00cfd06e7003c8e85",
            "self": false,
            "source_security_group_id": "sg-037eb4dcf105fef0f",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-3580168199",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-037eb4dcf105fef0f",
            "security_group_rule_id": "sgr-0c292e976190d780b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-2558075242",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-037eb4dcf105fef0f",
            "security_group_rule_id": "sgr-0e57afe92a19cacc4",
            "self": false,
            "source_security_group_id": "sg-0a0822931f340999c",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-1420413737",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-037eb4dcf105fef0f",
            "security_group_rule_id": "sgr-0c3d5326489ad9d27",
            "self": false,
            "source_security_group_id": "sg-0a0822931f340999c",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-2649468095",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-037eb4dcf105fef0f",
            "security_group_rule_id": "sgr-03ff7d30924f42721",
            "self": false,
            "source_security_group_id": "sg-0a0822931f340999c",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-2394394782",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-037eb4dcf105fef0f",
            "security_group_rule_id": "sgr-0c15aaa9ab39bb468",
            "self": false,
            "source_security_group_id": "sg-0a0822931f340999c",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-3927352149",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-037eb4dcf105fef0f",
            "security_group_rule_id": "sgr-0bb1276dced824d8d",
            "self": false,
            "source_security_group_id": "sg-0a0822931f340999c",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1950664663",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-037eb4dcf105fef0f",
            "security_group_rule_id": "sgr-0032c54bc3ef312e2",
            "self": false,
            "source_security_group_id": "sg-0a0822931f340999c",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-2389345222",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-037eb4dcf105fef0f",
            "security_group_rule_id": "sgr-0d52bd46e4bc6a633",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1000570674",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-037eb4dcf105fef0f",
            "security_group_rule_id": "sgr-0dd64bc62976a1a7c",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-2684148957",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-037eb4dcf105fef0f",
            "security_group_rule_id": "sgr-0938b7e5739a86a83",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654447829:network-acl/acl-0ad809e8280095d0b",
            "default_network_acl_id": "acl-0ad809e8280095d0b",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0ad809e8280095d0b",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "654654447829",
            "subnet_ids": [
              "subnet-021c2507ffcaa6921",
              "subnet-03651c0450584fce2",
              "subnet-03914dd559dbe9fc2",
              "subnet-0f61159154010c7fd"
            ],
            "tags": {
              "Name": "anup-eks-vpc-default",
              "kubernetes.io/cluster/anup-eks-KLvDw7qW": "shared"
            },
            "tags_all": {
              "Name": "anup-eks-vpc-default",
              "kubernetes.io/cluster/anup-eks-KLvDw7qW": "shared"
            },
            "vpc_id": "vpc-0e21afa0e42cfe0f9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654447829:route-table/rtb-09374a9a45c7dc5a9",
            "default_route_table_id": "rtb-09374a9a45c7dc5a9",
            "id": "rtb-09374a9a45c7dc5a9",
            "owner_id": "654654447829",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "anup-eks-vpc-default",
              "kubernetes.io/cluster/anup-eks-KLvDw7qW": "shared"
            },
            "tags_all": {
              "Name": "anup-eks-vpc-default",
              "kubernetes.io/cluster/anup-eks-KLvDw7qW": "shared"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0e21afa0e42cfe0f9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654447829:security-group/sg-0e7853d9e9203b25b",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0e7853d9e9203b25b",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "654654447829",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "anup-eks-vpc-default",
              "kubernetes.io/cluster/anup-eks-KLvDw7qW": "shared"
            },
            "tags_all": {
              "Name": "anup-eks-vpc-default",
              "kubernetes.io/cluster/anup-eks-KLvDw7qW": "shared"
            },
            "vpc_id": "vpc-0e21afa0e42cfe0f9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f3a0a545cbac3614",
            "arn": "arn:aws:ec2:us-east-1:654654447829:elastic-ip/eipalloc-0f3a0a545cbac3614",
            "domain": "vpc",
            "id": "eipalloc-0f3a0a545cbac3614",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-194-193-110.compute-1.amazonaws.com",
            "public_ip": "34.194.193.110",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "anup-eks-vpc-us-east-1a",
              "kubernetes.io/cluster/anup-eks-KLvDw7qW": "shared"
            },
            "tags_all": {
              "Name": "anup-eks-vpc-us-east-1a",
              "kubernetes.io/cluster/anup-eks-KLvDw7qW": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654447829:internet-gateway/igw-0a56a7187b3b97d78",
            "id": "igw-0a56a7187b3b97d78",
            "owner_id": "654654447829",
            "tags": {
              "Name": "anup-eks-vpc",
              "kubernetes.io/cluster/anup-eks-KLvDw7qW": "shared"
            },
            "tags_all": {
              "Name": "anup-eks-vpc",
              "kubernetes.io/cluster/anup-eks-KLvDw7qW": "shared"
            },
            "vpc_id": "vpc-0e21afa0e42cfe0f9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f3a0a545cbac3614",
            "association_id": "eipassoc-01181c48e0e39b89a",
            "connectivity_type": "public",
            "id": "nat-09146b9f295799337",
            "network_interface_id": "eni-0cbc8435a492461b6",
            "private_ip": "10.0.4.197",
            "public_ip": "34.194.193.110",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f61159154010c7fd",
            "tags": {
              "Name": "anup-eks-vpc-us-east-1a",
              "kubernetes.io/cluster/anup-eks-KLvDw7qW": "shared"
            },
            "tags_all": {
              "Name": "anup-eks-vpc-us-east-1a",
              "kubernetes.io/cluster/anup-eks-KLvDw7qW": "shared"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-030e5313a62aadab71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-09146b9f295799337",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-030e5313a62aadab7",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a56a7187b3b97d78",
            "id": "r-rtb-002245d4f21ab5d701080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-002245d4f21ab5d70",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654447829:route-table/rtb-030e5313a62aadab7",
            "id": "rtb-030e5313a62aadab7",
            "owner_id": "654654447829",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "anup-eks-vpc-private",
              "kubernetes.io/cluster/anup-eks-KLvDw7qW": "shared"
            },
            "tags_all": {
              "Name": "anup-eks-vpc-private",
              "kubernetes.io/cluster/anup-eks-KLvDw7qW": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e21afa0e42cfe0f9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654447829:route-table/rtb-002245d4f21ab5d70",
            "id": "rtb-002245d4f21ab5d70",
            "owner_id": "654654447829",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "anup-eks-vpc-public",
              "kubernetes.io/cluster/anup-eks-KLvDw7qW": "shared"
            },
            "tags_all": {
              "Name": "anup-eks-vpc-public",
              "kubernetes.io/cluster/anup-eks-KLvDw7qW": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e21afa0e42cfe0f9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011a2b2ead46fad2b",
            "route_table_id": "rtb-030e5313a62aadab7",
            "subnet_id": "subnet-03914dd559dbe9fc2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a9b1cee363d8049a",
            "route_table_id": "rtb-030e5313a62aadab7",
            "subnet_id": "subnet-021c2507ffcaa6921"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e73b140af9c6c579",
            "route_table_id": "rtb-002245d4f21ab5d70",
            "subnet_id": "subnet-0f61159154010c7fd"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e0cb56ccdeccfb38",
            "route_table_id": "rtb-002245d4f21ab5d70",
            "subnet_id": "subnet-03651c0450584fce2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654447829:subnet/subnet-03914dd559dbe9fc2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03914dd559dbe9fc2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654447829",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "anup-eks-vpc-private-us-east-1a",
              "kubernetes.io/cluster/anup-eks-KLvDw7qW": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "anup-eks-vpc-private-us-east-1a",
              "kubernetes.io/cluster/anup-eks-KLvDw7qW": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0e21afa0e42cfe0f9"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654447829:subnet/subnet-021c2507ffcaa6921",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-021c2507ffcaa6921",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654447829",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "anup-eks-vpc-private-us-east-1b",
              "kubernetes.io/cluster/anup-eks-KLvDw7qW": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "anup-eks-vpc-private-us-east-1b",
              "kubernetes.io/cluster/anup-eks-KLvDw7qW": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0e21afa0e42cfe0f9"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654447829:subnet/subnet-0f61159154010c7fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f61159154010c7fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654447829",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "anup-eks-vpc-public-us-east-1a",
              "kubernetes.io/cluster/anup-eks-KLvDw7qW": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "anup-eks-vpc-public-us-east-1a",
              "kubernetes.io/cluster/anup-eks-KLvDw7qW": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0e21afa0e42cfe0f9"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654447829:subnet/subnet-03651c0450584fce2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03651c0450584fce2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654447829",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "anup-eks-vpc-public-us-east-1b",
              "kubernetes.io/cluster/anup-eks-KLvDw7qW": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "anup-eks-vpc-public-us-east-1b",
              "kubernetes.io/cluster/anup-eks-KLvDw7qW": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0e21afa0e42cfe0f9"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654447829:vpc/vpc-0e21afa0e42cfe0f9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ad809e8280095d0b",
            "default_route_table_id": "rtb-09374a9a45c7dc5a9",
            "default_security_group_id": "sg-0e7853d9e9203b25b",
            "dhcp_options_id": "dopt-0c7e80417df84991a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e21afa0e42cfe0f9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09374a9a45c7dc5a9",
            "owner_id": "654654447829",
            "tags": {
              "Name": "anup-eks-vpc",
              "kubernetes.io/cluster/anup-eks-KLvDw7qW": "shared"
            },
            "tags_all": {
              "Name": "anup-eks-vpc",
              "kubernetes.io/cluster/anup-eks-KLvDw7qW": "shared"
            }
          },
          "dependencies": [
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}